--- a/app/src/main/res/layout/activity_person.xml
+++ b/app/src/main/res/layout/activity_person.xml
@@ -24,31 +24,20 @@
         android:elevation="6dp"
         android:gravity="bottom|end"
         android:src="@drawable/ic_baseline_add_24"
-        app:layout_constraintBottom_toTopOf="@+id/userInfotextView"
+        app:layout_constraintBottom_toTopOf="@+id/logoutButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:pressedTranslationZ="12dp"
         tools:ignore="MissingConstraints" />
 
 
-
-
-    <TextView
-        android:id="@+id/userInfotextView"
-        android:layout_width="4dp"
-        android:layout_height="19dp"
-        android:text=""
-        android:textColor="#BEFFE5"
-        app:layout_constraintBottom_toTopOf="@+id/logoutButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <Button
         android:id="@+id/logoutButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#181A3E"
+        android:background="@color/blue_20"
         android:text="გამოსვლა"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="22dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/item_listView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
